--- a/assets/scss/components/_animations.scss
+++ b/assets/scss/components/_animations.scss
@@ -133,9 +133,14 @@
         transition: flex .5s;
     }
 
+    span {
+        flex: 0 0 15px;
+        margin-right: 15px;
+    }
+
     // Check section
     > div:last-child {
-        transition: flex .5s linear, opacity .5s linear, margin-right .5s .5s;
+        transition: flex .5s linear, opacity .5s linear;
         display: flex;
         overflow: hidden;
         opacity: 0;
@@ -146,11 +151,7 @@
         align-items: center;
         justify-content: center;
         flex: 0 0 0;
-
-        span {
-            flex: 1 1 10%;
-            transition: flex .5s linear;
-        }
+        margin-right: -15px;
 
         i {
             font-size: 1.5em;
@@ -166,16 +167,12 @@
             transition-duration: 500ms;
             flex: 1;
         }
-        span {
-            flex: 0 0 15px;
-            margin-right: 15px;
-        }
+        
         // Checkbox container
         div:last-child {
             transition: margin-right 0s, flex .5s linear, opacity .5s linear;
             opacity: 1;
             flex: 0 0 80px;
-            margin-right: -15px;
             
             i {
                 transition: transform .5s linear;
